...
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nickname" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZj-nr-07s">
                                <rect key="frame" x="82" y="302" width="250" height="41"/>
                                <constraints>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Species" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="II7-6l-ifG">
                                <rect key="frame" x="82" y="354" width="250" height="34"/>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="30"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" red="0.40000000000000002" green="0.6588235294" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="HK1-rW-v3W"/>
                    </view>
                    <navigationItem key="navigationItem" title="Plants" id="XlX-jD-sTC">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="gear" catalog="system" id="nWa-wt-7AF">
                            <connections>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ueP-U1-5yx">
                                <rect key="frame" x="214" y="385.66666666666669" width="180" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignInUsername"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="5yP-ZM-q8M"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LX0-9r-hUD">
                                <rect key="frame" x="214" y="430.66666666666669" width="180" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignInPassword"/>
                                <color key="textColor" red="0.1843137255" green="0.27058823529999998" blue="0.32549019610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="72" y="802" width="270" height="70"/>
                                <color key="backgroundColor" red="1" green="0.98431372549999996" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignInButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="XEg-35-Ox9"/>
...
                                <rect key="frame" x="72" y="802" width="270" height="70"/>
                                <color key="backgroundColor" red="1" green="0.98431372549999996" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="LandingLogInButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="hD0-te-91h"/>
...
                                <rect key="frame" x="72" y="708" width="270" height="70"/>
                                <color key="backgroundColor" red="1" green="0.98431372549999996" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="LandingSignUpButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="IlU-eV-xfH"/>
...
                                <rect key="frame" x="72" y="802" width="270" height="70"/>
                                <color key="backgroundColor" red="1" green="0.98431372549999996" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="RegistrationSignUpButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="Uo8-pN-B54"/>
...
                                <rect key="frame" x="214" y="385.66666666666669" width="180" height="34"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="RegistrationUsername" label="Username"/>
                                <color key="textColor" red="0.1843137255" green="0.27058823529999998" blue="0.32549019610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kgq-xm-CF1">
                                <rect key="frame" x="214" y="430.66666666666669" width="180" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="RegistrationPassword"/>
                                <color key="textColor" red="0.1843137255" green="0.27058823529999998" blue="0.32549019610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4UN-oN-mD6">
                                <rect key="frame" x="214" y="476.66666666666669" width="180" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="RegistrationPhoneNumber"/>
                                <color key="textColor" red="0.1843137255" green="0.27058823529999998" blue="0.32549019610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
